--- a/BlazorInventor/appsettings.json
+++ b/BlazorInventor/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseName": "Company_DB",
+  "ConnectionStrings": {
+    "MongoDB": "<Put Connection String Here>"
+  }
 }
