install localiziton nugat

--- a/BlazorInventor/BlazorInventor.csproj
+++ b/BlazorInventor/BlazorInventor.csproj
@@ -2,8 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>89614221-b7a9-421d-b595-3a4e4a2a9fe0</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\images\productionLine.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DBInventorLibrary\DBInventorLibrary.csproj" />
+  </ItemGroup>
 
 </Project>
