add reference to class Library

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/BlazorInventor/Data/WeatherForecast.cs
+/BlazorInventor/Data/WeatherForecastService.cs
+/BlazorInventor/Data/WeatherForecast.cs
