add path to images folder

--- a/BlazorInventor/appsettings.json
+++ b/BlazorInventor/appsettings.json
@@ -9,5 +9,7 @@
   "DatabaseName": "Company_DB",
   "ConnectionStrings": {
     "MongoDB": "<Put Connection String Here>"
-  }
+  },
+  "FileStorage": "C:\\Users\\wajdi\\source\\repos\\BlazorInventor\\BlazorInventor\\wwwroot",
+  "WebStorage": "./materialsImage"
 }
