--- a/BlazorInventor/BlazorInventor.csproj
+++ b/BlazorInventor/BlazorInventor.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\DBInventorLibrary\DBInventorLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\materialsImage\" />
+  </ItemGroup>
+
 </Project>
