add range for quantity

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /BlazorInventor/Data/WeatherForecast.cs
 /BlazorInventor/Data/WeatherForecastService.cs
 /BlazorInventor/Data/WeatherForecast.cs
+/BlazorInventor/wwwroot/materialsImage
