change implement the interface to the new class library that handle the CRUD from mango DB

--- a/BlazorInventor/BlazorInventor.csproj
+++ b/BlazorInventor/BlazorInventor.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DBInventorLibrary\DBInventorLibrary.csproj" />
+    <ProjectReference Include="..\MongoDBConnectionClassLibrary\MongoDBConnectionClassLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
