--- a/BlazorInventor/appsettings.json
+++ b/BlazorInventor/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "SqlInfo": {
+    "DataBase": "InventorDB",
+    "ConnectionStrings": {
+      "SQL": "Server=localhost;Database=InventorDB;Integrated Security=True;Trust Server Certificate=True"
+    }
+  },
   "DatabaseName": "Company_DB",
   "ConnectionStrings": {
     "MongoDB": "<Put Connection String Here>"
