--- a/DBInventorLibrary/DBInventorLibrary.csproj
+++ b/DBInventorLibrary/DBInventorLibrary.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EntityDBClassLibrary\EntityDBClassLibrary.csproj" />
     <ProjectReference Include="..\MongoDBConnectionClassLibrary\MongoDBConnectionClassLibrary.csproj" />
   </ItemGroup>
 
